[metadata]
name = bitflyer-realtime-lob
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/bitflyer-realtime-lob
licence = MIT

[options]
packages = 
    bitflyer_realtime_lob
python_requires = ==3.11.*
include_package_data = True
install_requires =
    dependency-injector
    python-dotenv
    requests
    websockets